# eveqs

./: .gitignore  Makefile.am  README.md  configure.ac  index.html  libeveqs.pc.in  params.json
api/: index.html  search.json
api/xml/: eiffel-interop.xml  index.xml  notifier.xml  notify_token.xml  priv_queue.xml  processor.xml  queue_cache.xml  req_grp.xml  spsc.xml  spsc_queue_impl.xml
benchmarks/chain/: main.ecf
benchmarks/chameneos/: Makefile  application.e  broker.e  chameneos.e  chameneos.ecf  signal.e
benchmarks/condition/: application.e  cond_worker.e  condition.ecf  var.e
benchmarks/mutex/: application.e  mutex.ecf  mutex_worker.e  var.e
benchmarks/prodcons/: application.e  consumer.e  prodcons.ecf  producer.e  shared_queue.e  var.e
benchmarks/threadring/: Makefile  application.e  threadring.ecf  threadring_worker.e
doc/: Makefile.am
src/: .dir-locals.el  Makefile.am  eif_block_token.hpp  eif_lock.hpp  eif_queue.hpp  eif_utils.cpp  eif_utils.hpp  eveqs.cpp  eveqs.h  global.cpp  global.hpp  internal.hpp  notify_token.cpp  notify_token.hpp  private_queue.cpp  private_queue.hpp  processor.cpp  processor.hpp  processor_registry.cpp  processor_registry.hpp  qoq.cpp  qoq.hpp  queue_cache.hpp  req_grp.cpp  req_grp.hpp  spsc.hpp  spsc_queue.c  spsc_queue.h  spsc_queue.hpp
